added a gitignore list to node_modules and public watch map

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Todo
+                    Todohejhej
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
                     <li class="card">
-                        Card #1
+                        Card #14
                         <button class="button delete">X</button>
                     </li>
                     <li class="add-new">
@@ -31,18 +31,20 @@
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Doing
+                    Doingerstaeasd
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
+
                     <li class="card">
                         Card #2
                         <button class="button delete">X</button>
                     </li>
+
                     <li class="add-new">
                         <form class="new-card" action="index.html">
                             <input type="text" name="title" placeholder="Please name the card" />
-                            <button class="button add">Add new card</button>
+                            <button id="addCard" class="button add">Add new card</button>
                         </form>
                     </li>
                 </ul>
