--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>jQuery UI - Trello Clone (yay!)</title>
-<link href="./css/index.1d2140e6b895677b4878.css" rel="stylesheet"></head>
+</head>
 <body>
     <div class="board">
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Todo
+                    Todohejhej
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
                     <li class="card">
-                        Card #1
+                        Card #14
                         <button class="button delete">X</button>
                     </li>
                     <li class="add-new">
@@ -31,18 +31,20 @@
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Doing
+                    Doingerstaeasd
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
+
                     <li class="card">
                         Card #2
                         <button class="button delete">X</button>
                     </li>
+
                     <li class="add-new">
                         <form class="new-card" action="index.html">
                             <input type="text" name="title" placeholder="Please name the card" />
-                            <button class="button add">Add new card</button>
+                            <button id="addCard" class="button add">Add new card</button>
                         </form>
                     </li>
                 </ul>
