update to get working version with create-list and new cards with listeners

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>jQuery UI - Trello Clone (yay!)</title>
-</head>
+<link href="./css/index.c31f543346f597882552.css" rel="stylesheet"></head>
 <body>
     <div class="board">
         <div class="column">
@@ -15,7 +15,7 @@
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
-                    <li class="card">
+                    <li class="card ui-sortable-helper">
                         Card #14
                         <button class="button delete">X</button>
                     </li>
