--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
-                    <li class="card">
+                    <li class="card ui-sortable-helper">
                         Card #14
                         <button class="button delete">X</button>
                     </li>
