--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>jQuery UI - Trello Clone (yay!)</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
     <div class="board">
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Todohejhej
+                    Todo
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
-                    <li class="card ui-sortable-helper">
+                    <li id="clickMe" class="card ui-sortable-helper">
                         Card #14
                         <button class="button delete">X</button>
                     </li>
@@ -31,12 +34,12 @@
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Doingerstaeasd
+                    Doing
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
 
-                    <li class="card">
+                    <li id="clickMe" class="card">
                         Card #2
                         <button class="button delete">X</button>
                     </li>
@@ -53,11 +56,11 @@
         <div class="column">
             <div class="list">
                 <div class="list-header">
-                    Done
+                    Completed
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
-                    <li class="card">
+                    <li id="clickMe" class="card">
                         Card #3
                         <button class="button delete">X</button>
                     </li>
@@ -73,7 +76,9 @@
         <div class="column">
             <button id="new-list" class="button">Add new list</button>
         </div>
+        
     </div>
+    <textarea cols="0" rows="0" id="myText" style="display:none">Hej jag är en dialog som inte sitter fast på min parent</textarea>
 
     <div id="list-creation-dialog" title="Create new list" style="height: 40px">
         <form> 
