Start implementing the second effect

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                     <button class="button delete">X</button>
                 </div>
                 <ul class="list-cards">
-                    <li id="clickMe" class="card ui-sortable-helper">
+                    <li class="card ui-sortable-helper">
                         Card #14
                         <button class="button delete">X</button>
                     </li>
@@ -78,12 +78,15 @@
         </div>
         
     </div>
-    <textarea cols="0" rows="0" id="myText" style="display:none">Hej jag är en dialog som inte sitter fast på min parent</textarea>
-
     <div id="list-creation-dialog" title="Create new list" style="height: 40px">
-        <form> 
-            <input type="text" name="title" placeholder="List title" />
+        <form class="submit-list"> 
+            <input type="text" name="title" placeholder="List title"/>
+            <p>Date: <input type="text" id="datepicker"></p>
+            <button class="button" name="title">submit</button>
         </form>
+    </div>
+    <div id="card-creation-dialog" style="height: 40px">
+        <p></p>
     </div>
 <script type="text/javascript" src="./bundle.js"></script></body>
 </html>
