--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="board">
         <div class="column">
-            <div class="list">
+            <div id="toggle" class="list">
                 <div class="list-header">
                     Todo
                     <button class="button delete">X</button>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="column">
-            <div class="list">
+            <div id="toggle" class="list">
                 <div class="list-header">
                     Doing
                     <button class="button delete">X</button>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="column">
-            <div class="list">
+            <div id="toggle" class="list">
                 <div class="list-header">
                     Completed
                     <button class="button delete">X</button>
