Fix widget factory to not bubble event listener

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
   <body>
-    <button class="button primary bgButton">Change BackgroundColor!</button>
+    <div>
+      <button class="button primary bgButton">Change BackgroundColor!</button>
+    </div>
     <div class="board">
       <div class="column">
         <div id="toggle" class="list">
